--- a/manifest.json
+++ b/manifest.json
@@ -41,13 +41,31 @@
     "default_icon": {
       "16": "icons/page-16.png",
       "32": "icons/page-32.png"
-    }
-  },
-  
+    },
+	"default_title" :"filtre option"
+},
+
+	"message_display_action": {
+		"default_icon": {
+		  "16": "icons/page-16.png",
+		  "32": "icons/page-32.png"
+		},
+		"default_title" :"action"
+	},
+
   "icons": {
     "16": "icons/page-16.png",
     "32": "icons/page-32.png",
     "48": "icons/page-48.png"
-  }
+  },
+  
+	"commands": {
+		"range": {
+			"suggested_key": {
+				"default": "Ctrl+Shift+X"
+			},
+			"description": "Range Maile"
+		}
+	}
 
 }
